# memovox

./: .env.example  .gitignore  CITATION.cff  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  STRESS_TEST_VIDEOS.md  pyproject.toml  spec.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: BENCHMARK.md  DEPLOY.md  DESIGN.md  EXPLAINER.md  FUNDING.md
docs/benchmark/: SOURCES.md
docs/roadmap/: CONVENTIONS.md  PROGRESS.md  README.md  m0-1-observability.md  m0-2-scale-storage.md  m0-3-word-spans-asr.md  m1-1-visual-retrieval.md  m1-2-eval-expansion.md  m2-1-rerank.md  m2-2-agentic-planner.md  m2-3-answer-with-video.md  m3-1-decay-versioning.md  m3-2-subscriptions-sync.md  m3-3-serving-deployment.md  m3-4-backend-benchmark.md  mx-cross-cutting-hardening.md
docs/superpowers/plans/: 2026-06-01-phase2-knowledge-trust.md  2026-06-03-phase3-synthesis.md  2026-06-03-phase4-roadmap.md
eval/: __init__.py  benchmark.py  harness.py  scale.py
eval/benchmark/: README.md  manifest.example.json  qa.example.json
eval/fixtures/: words_clip.json
eval/golden/: README.md  clips.json  contradictions.json  entities.json  parity.json  qa.json  span_baseline.json  speakers.json  talk_a.en.vtt  talk_b.en.vtt  talk_c.en.vtt  talk_vis.en.vtt  topics.json  visual.json
examples/: README.md  demo.py  scaling_laws.en.vtt
src/memovox/: __init__.py  __main__.py  audio.py  cli.py  config.py  errors.py  observe.py  pipeline.py  sdk.py  sync_state.py  util.py  vectormath.py
src/memovox/assay/: __init__.py  claims.py  (+3 more)
stress/: driver.py  panel.mjs  panel_upgraded.mjs  upgraded_probes.py
stress/reports/: iter0.json  iter0.md  iter1.json  iter1.md  iter10.json  iter10.md  iter12.json  iter12.md  iter13.json  iter13.md  iter14.json  iter14.md  iter15.json  iter15.md  iter16.json  iter16.md  iter2.json  iter2.md  iter3.json  iter3.md  iter4.json  iter4.md  iter7.json  iter7.md  iter8.json  iter8.md  iterE.json  iterE.md  iterF.json  iterF.md  iterG.json  iterG.md  iterG_probes.json  iterH.json  iterH.md  iterH_probes.json  iterJ_probes.json  iterL_probes.json  iterM_probes.json
tests/: __init__.py  _bootstrap.py  test_acquire.py  test_asr_device.py  test_asr_readiness.py  test_assay.py  test_augur.py  test_backends.py  test_benchmark.py  test_benchmark_runner.py  test_caps.py  test_caption_cleaning_and_consolidate.py  test_cli.py  test_config_models_dir.py  test_consensus.py  test_consolidate.py  test_consolidate_incremental.py  test_decay.py  test_escapement.py  test_eval.py  test_evolution.py  test_extract_output.py  test_fastapi_parity.py  test_fusion_words.py  test_graph_retrieval.py  test_ingest_signature.py  test_integration.py  test_integrity.py  test_jobs.py  test_loom.py  test_mcp.py  test_observe.py  test_observe_pipeline.py  test_optional_align_backends.py  test_relevance_and_claim_quality.py  test_rerank.py  test_resilience.py  test_resolve.py  test_rest.py  test_review_hardening.py  (+18 more)
(+56 files in other folders)
